add_executable(echoserver echoserver.cc)
target_link_libraries(echoserver anoii)
add_executable(chargenserver chargenserver.cc)
target_link_libraries(chargenserver anoii)
add_executable(chargenclient chargenclient.cc)
target_link_libraries(chargenclient anoii)
add_executable(simple-netcat simple-netcat.cc)
target_link_libraries(simple-netcat anoii)
add_executable(numgenserver numgenserver.cc)
target_link_libraries(numgenserver anoii)
add_executable(numgenclient numgenclient.cc)
target_link_libraries(numgenclient anoii)
add_executable(tcp-forward tcp-forward.cc)
target_link_libraries(tcp-forward anoii)
add_executable(udpechoserver udpechoserver.cc)
target_link_libraries(udpechoserver anoii)
add_executable(udpechoclient udpechoclient.cc)
target_link_libraries(udpechoclient anoii)
