add_executable(thread_id thread_id.cc)
add_executable(event_loop_1_test event_loop_1_test.cc)
target_link_libraries(event_loop_1_test anoii)
add_executable(functor_test functor_test.cc)
target_link_libraries(functor_test anoii)
add_executable(timer_test timer_test.cc)
target_link_libraries(timer_test anoii)
add_executable(acceptor_test acceptor_test.cc)
target_link_libraries(acceptor_test anoii)
add_executable(discard_test discard_test.cc)
target_link_libraries(discard_test anoii)
add_executable(buffer_test buffer_test.cc)
target_link_libraries(buffer_test anoii)
add_executable(connector_test connector_test.cc)
target_link_libraries(connector_test anoii)
